--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <script src="assets/js/underscore-umd-min.js"></script>
-    <script src="assets/js/juego.js"></script>
+    <script src="assets/js/juego-min.js"></script>
 
 </body>
 
